@@ -878,6 +878,49 @@
                           (find-free-fun fun "shouldn't happen! (no-cmacro)")
                           form))))
 
+;;; This may produce false matches when there are multiple copies and
+;;; they are reordered, duplicated or omitted. Still better than
+;;; nothing.
+(defun recover-source-paths (original-form expanded)
+  (when (policy *lexenv* (> debug 1))
+    (let ((equal-table (make-hash-table :test #'equal))
+          some)
+      (let ((seen (alloc-xset)))
+        (labels ((rec (form)
+                   (when (and (consp form)
+                              (not (xset-member-p form seen)))
+                     (let ((path (gethash form *source-paths*)))
+                       (push path (gethash form equal-table))
+                       (when path
+                         (setf some t)))
+                     (loop while (and (consp form)
+                                      (not (xset-member-p form seen)))
+                           do
+                           (add-to-xset form seen)
+                           (rec (pop form))))))
+          (rec original-form)))
+      (when some
+        (let ((seen (alloc-xset)))
+          (labels ((rec (form)
+                     (unless (xset-member-p form seen)
+                       (let ((original (gethash form equal-table)))
+                         (when original
+                           (let ((location
+                                   (if (cdr original)
+                                       (prog1 (car (last original))
+                                         (setf (gethash form equal-table)
+                                               (nbutlast original)))
+                                       (car original))))
+                             (when (and location
+                                        (not (gethash form *source-paths*)))
+                               (setf (gethash form *source-paths*) location))))
+                         (loop while (and (consp form)
+                                          (not (xset-member-p form seen)))
+                               do
+                               (add-to-xset form seen)
+                               (rec (pop form)))))))
+            (rec expanded)))))))
+
 ;;; Expand FORM using the macro whose MACRO-FUNCTION is FUN, trapping
 ;;; errors which occur during the macroexpansion.
 (defun careful-expand-macro (fun form &optional cmacro)
@@ -909,7 +952,10 @@
                          (t
                           (compiler-error "~@<~A~@:_ ~A~:>"
                                           (wherestring) c))))))
-      (funcall (valid-macroexpand-hook) fun form *lexenv*))))
+      (let ((result (funcall (valid-macroexpand-hook) fun form *lexenv*)))
+        #-sb-xc-host
+        (recover-source-paths form result)
+        result))))
 
 ;;;; conversion utilities
 
